src/objects/Position__c.object
<CustomObject>
    <description>Used to record vacant tutoring positions that need to be filled.</description>
    <fields>
        <fullName>AdvancedTutorPathwaySpecific__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick this box if the position is suitable for advanced tutors only</inlineHelpText>
        <label>Advanced Tutor Pathway Specific</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <description>Created by Oscar Mawby @ Impact Box 05/06/2020</description>
        <formula>TEXT(  Cohort__r.Opportunity__r.School__r.AreaP2__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Taken from &apos;Area&apos; on School record</inlineHelpText>
        <label>Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cohort__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Cohort</label>
        <referenceTo>Cohort__c</referenceTo>
        <relationshipLabel>Position</relationshipLabel>
        <relationshipName>Position</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactTimePay__c</fullName>
        <defaultValue>12</defaultValue>
        <inlineHelpText>Amount paid to the tutor per hour for their contact time</inlineHelpText>
        <label>Contact Time Hourly Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DayofWeek__c</fullName>
        <label>Day of Week</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EndTime__c</fullName>
        <label>End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                    <default>true</default>
                    <label>Weekly</label>
                </value>
                <value>
                    <fullName>Fortnightly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HighPriorityPosition__c</fullName>
        <defaultValue>false</defaultValue>
        <label>High Priority Position</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HoursPerSession__c</fullName>
        <formula>(((HOUR(EndTime__c) -  HOUR(StartTime__c))*60)+ (MINUTE(EndTime__c) - MINUTE(StartTime__c))) / 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Hours Per Session</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NonContactPay__c</fullName>
        <defaultValue>7</defaultValue>
        <inlineHelpText>Amount paid to the tutor for their non-contact work per hour</inlineHelpText>
        <label>Non-Contact Hourly Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NonContactTimehours__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>E.g. for 30 minutes, put 0.5</inlineHelpText>
        <label>Non-Contact Time Per Session (hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofPositionsAvailable__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Number of Positions Available</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofSessions__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Created by Oscar @ Impact Box, 24/08/2020</description>
        <inlineHelpText>The number of sessions occurring within the time period</inlineHelpText>
        <label>Number of Sessions</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <formula>Cohort__r.Opportunity__r.School__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Postcode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SchoolTypeMatching__c</fullName>
        <formula>TEXT( Cohort__r.Opportunity__r.School__r.SchoolTypePhase2__c )</formula>
        <label>School Type Matching</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SchoolType__c</fullName>
        <description>Created by Oscar @ Impact Box 17/06/2020</description>
        <formula>TEXT( Cohort__r.Opportunity__r.School__r.Area__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <formula>Cohort__r.Opportunity__r.School__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShiftNotes__c</fullName>
        <label>Shift Notes</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ShowToUserInCommunity__c</fullName>
        <formula>AND(
 TEXT($User.Area__c) = Area__c ,
 CONTAINS( $User.TutorSkillSet__c , Subject__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show To User in Community</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SingleSessionLengthHours__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Created by Oscar Mawby @ Impact Box, September 3rd 2020</description>
        <inlineHelpText>How long is a single session going to be?</inlineHelpText>
        <label>Single Session Length (Hours)</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <label>Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Created by Oscar @ Impact Box 04/06/2020</description>
        <formula>TEXT(Cohort__r.Subject__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalPayPerSession__c</fullName>
        <formula>(ContactTimePay__c *   SingleSessionLengthHours__c  ) + ( NonContactPay__c *  NonContactTimehours__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Pay Per Session</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalPay__c</fullName>
        <description>Created by Oscar Mawby @ Impact Box, August 24th 2020</description>
        <formula>NumberofSessions__c *  TotalPayPerSession__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The total pay for all sessions, Pay per Session x Number of Sessions</inlineHelpText>
        <label>Total Pay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TutorScore__c</fullName>
        <formula>IF($User.ATPStatus__c = true,5,0)
+
IF($User.TutorArea__c = TEXT(Cohort__r.Assignment__r.School__r.Area__c),1,0)
+
IF( ISBLANK($User.TutorStartDate__c),0,3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tutor Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TutorYPRatio__c</fullName>
        <inlineHelpText>The number of Pupils per Tutor that will be in each session.</inlineHelpText>
        <label>Tutor-Pupil Ratio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1:1</fullName>
                </value>
                <value>
                    <fullName>1:2</fullName>
                </value>
                <value>
                    <fullName>1:3</fullName>
                </value>
                <value>
                    <fullName>T.B.C.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WeeklyPositionSubscription__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Weekly Position Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>YearGroup__c</fullName>
        <formula>TEXT(Cohort__r.SchoolYear__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year Group</label>
        <type>Text</type>
    </fields>
    <label>Position</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Area__c</columns>
        <columns>Cohort__c</columns>
        <columns>Status__c</columns>
        <columns>Subject__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <role>InternalUser</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>OpenPositions</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>School__c</columns>
        <columns>StartTime__c</columns>
        <columns>DayofWeek__c</columns>
        <columns>Frequency__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>TotalPayPerSession__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Open Positions</label>
    </listViews>
    <nameField>
        <label>Position Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>NonContact_Amount_Populated</fullName>
        <active>true</active>
        <errorConditionFormula>OR(AND( ISBLANK(NonContactPay__c)=TRUE, ISBLANK(NonContactTimehours__c)=FALSE), AND(ISBLANK(NonContactPay__c)= FALSE, ISBLANK(NonContactTimehours__c)=TRUE))</errorConditionFormula>
        <errorMessage>Please specify the non-contact hours and pay amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RequiredFieldsForOpenStatus</fullName>
        <active>true</active>
        <errorConditionFormula>AND(

ISPICKVAL( Status__c, &apos;Open&apos;),

OR(

ISBLANK( EndDate__c ), ISBLANK(TEXT( DayofWeek__c )), ISBLANK( ContactTimePay__c ), ISBLANK( Cohort__c ), ISBLANK(  EndTime__c  ), ISBLANK(TEXT(  Frequency__c  )), ISBLANK(  StartDate__c ), ISBLANK(  StartTime__c  ), ISBLANK(TEXT( TutorYPRatio__c  )))

)</errorConditionFormula>
        <errorMessage>Please ensure you have populated all necessary fields before setting status to &apos;Open&apos;: Start Time, End Time, Start Date, End Date, Day of Week, Cohort, Frequency, Tutor Pupil Ratio, Contact Time Pay.</errorMessage>
    </validationRules>
</CustomObject>